# media_player

./: .gitignore  CLAUDE.md  build.gradle  logcat.sh  screenshots.sh  settings.gradle
app/: build.gradle
app/release/: install-aab.sh  output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: CMakeLists.txt  gapless_decoder_jni.cpp  image_decoder.h  image_decoder_jni.cpp  native-lib.cpp  pcm_buffer_jni.cpp  usb_audio.cpp  usb_audio.h  usb_audio_jni.cpp
app/src/main/cpp/libjpeg-turbo-config/: jconfig.h  jconfigint.h  jversion.h
app/src/main/cpp/libusb/libusb/: config.h
app/src/main/java/com/example/media_player/: AlbumDao.java  AppSettings.java  ArtworkActivity.java  ArtworkCache.java  ArtworkDiskCache.java  AudioEngine.java  AudioOutput.java  AudioTrackOutput.java  BluetoothCodecActivity.java  BluetoothCodecManager.java  BluetoothCodecSettings.java  BluetoothDeviceCodecConfig.java  CategoryAdapter.java  CategoryItem.java  DffParser.java  DsfParser.java  DuplicateDetector.java  EqAssignmentDao.java  EqProfileActivity.java  GroupedFragment.java  LrcParser.java  LyricsLoader.java  MainActivity.java  MatrixPlayerDatabase.java  MusicService.java  NativeGaplessDecoder.java  NativeImageDecoder.java  NativePcmBuffer.java  PcmBuffer.java  PlaybackObserver.java  PlaylistDao.java  PlaylistInfo.java  QueueDao.java  SearchCriteria.java  SearchDao.java  SearchFilterSheet.java  SearchFragment.java  SettingsActivity.java  SignalPathInfo.java  SignalPathView.java  (+14 more)
app/src/main/java/com/example/media_player/tidal/: DashFlacDataSource.java  HttpMediaDataSource.java  TidalApi.java  TidalAuth.java  TidalFragment.java  TidalModels.java
app/src/main/res/anim/: fade_in.xml
app/src/main/res/drawable/: ic_back.xml  ic_pause.xml  ic_play.xml  ic_rotate.xml  ic_screen_awake.xml  ic_screen_timeout.xml  ic_skip_next.xml  ic_skip_previous.xml
app/src/main/res/layout/: activity_artwork.xml  activity_bluetooth_codec.xml  activity_eq_profile.xml  activity_main.xml  activity_settings.xml  dialog_codec_config.xml  fragment_grouped.xml  fragment_search.xml  fragment_stats.xml  fragment_tidal.xml  fragment_tracks.xml  item_category.xml  item_category_grid.xml  item_eq_profile.xml  item_stat_header.xml  item_track.xml  sheet_search_filters.xml
app/src/main/res/menu/: main_menu.xml
app/src/main/res/values/: colors.xml  ids.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/xml/: usb_device_filter.xml
app/src/test/java/com/example/media_player/: ScreenshotTest.kt
audioengine/: build.gradle  proguard-rules.pro
audioengine/src/main/cpp/: CMakeLists.txt  audio_convert.h  audio_convert_jni.cpp  eq_processor.h  eq_processor_jni.cpp  gapless_decoder.h  gapless_decoder_jni.cpp  pcm_buffer.h  pcm_buffer_jni.cpp  usb_audio.h  usb_audio_jni.cpp
audioengine/src/main/java/com/matrixplayer/audioengine/: AudioEngine.java  AudioOutput.java  AudioTrackOutput.java  DffParser.java  DsfParser.java  EqProcessor.java  EqProfile.java  MatrixPlayer.java  NativeGaplessDecoder.java  NativePcmBuffer.java  SignalPathInfo.java  UsbAudioNative.java  UsbAudioOutput.java
docs/: AUDIO_ENGINE_API.md
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
tools/: build_eq_index.py
